SimpleWeather: UI updates
* Fix wind direction icon
* Add cloudiness icon for OWM
* UWP: Adjust MinWindowWidth for AdaptiveTriggers
* UWP: use WrapPanel from UWP Toolkit
* Android: update "Get Started" app widget layout
* Android: increase forecast panel width
* Add OWM attribution

--- a/SimpleWeather.Android/Resources/layout/app_widget_4x2.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_4x2.xml
@@ -117,6 +117,7 @@
                 android:orientation="horizontal">
 
                 <ImageView
+                    android:id="@+id/condition_pop_label"
                     android:layout_width="12dp"
                     android:layout_height="16dp"
                     android:layout_gravity="top|center_horizontal"
