--- a/SimpleWeather.Android/Resources/layout/app_widget_2x2.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_2x2.xml
@@ -213,6 +213,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/condition_pop_label"
                 android:layout_width="12dp"
                 android:layout_height="16dp"
                 android:layout_gravity="center"
