--- a/SimpleWeather.Android/Resources/layout/app_widget_getstarted_small.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_getstarted_small.xml
@@ -7,37 +7,20 @@
     android:background="@color/colorPrimary"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin"
-    tools:layout_height="144dp"
-    tools:layout_width="144dp">
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/spacer"
-        android:adjustViewBounds="true"
-        android:cropToPadding="true"
-        android:padding="8dp"
-        android:scaleType="fitCenter"
-        android:src="@drawable/ic_logo" />
-
-    <TextView
-        android:id="@+id/spacer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true" />
+    tools:layout_height="72dp"
+    tools:layout_width="72dp">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spacer"
-        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:gravity="center_horizontal"
         android:padding="8dp"
         android:text="@string/widget_getstarted_prompt"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="@android:color/white"
+        android:textSize="12sp"
         android:textStyle="bold" />
 </RelativeLayout>
