--- a/SimpleWeather.Android/Resources/layout/app_widget_getstarted_wide.xml
+++ b/SimpleWeather.Android/Resources/layout/app_widget_getstarted_wide.xml
@@ -1,20 +1,21 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/widgetBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:padding="@dimen/widget_margin"
-    tools:layout_height="144dp"
-    tools:layout_width="144dp">
+    tools:layout_height="72dp"
+    tools:layout_width="288dp">
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/spacer"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="1"
         android:adjustViewBounds="true"
         android:cropToPadding="true"
         android:padding="8dp"
@@ -22,17 +23,11 @@
         android:src="@drawable/ic_logo" />
 
     <TextView
-        android:id="@+id/spacer"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true" />
-
-    <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/spacer"
-        android:layout_centerHorizontal="true"
+        android:layout_gravity="center_vertical"
+        android:layout_weight="2"
         android:gravity="center_horizontal"
         android:padding="8dp"
         android:text="@string/widget_getstarted_prompt"
@@ -40,4 +35,4 @@
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textStyle="bold" />
-</RelativeLayout>
+</LinearLayout>
