SimpleWeather: add support for Met.no as weather provider
* Minor misc fixes
* Dispose content stream when finished
* Store instance of weather data in WeatherManager to use for helper functions
* UWP: increase hourly forecast panel width

--- a/SimpleWeather.UWP/SettingsPage.xaml
+++ b/SimpleWeather.UWP/SettingsPage.xaml
@@ -320,6 +320,12 @@
                                     <Image Source="Assets/Providers/openweathermap.png" Height="25" HorizontalAlignment="Left" />
                                 </HyperlinkButton>
                             </StackPanel>
+                            <StackPanel Padding="10">
+                                <TextBlock Text="MET Norway" Style="{StaticResource SubtitleTextBlockStyle}"/>
+                                <HyperlinkButton NavigateUri="https://www.met.no/en">
+                                    <Image Source="Assets/Providers/metno.png" Height="50" HorizontalAlignment="Left" />
+                                </HyperlinkButton>
+                            </StackPanel>
                         </StackPanel>
                     </Grid>
                 </ScrollViewer>
