--- a/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
@@ -257,6 +257,7 @@
         </Grid.RowDefinitions>
 
         <ToggleButton x:Name="AlertHeader" Background="#FF006FBF" Style="{StaticResource ToggleButtonStyle1}" Grid.Row="0"
+                      Height="40"
                       Foreground="White" IsChecked="False">
             <Grid Padding="5">
                 <Grid.ColumnDefinitions>
@@ -269,10 +270,11 @@
                                          Width="25"
                                          Padding="5,0" Grid.Column="0"
                                          HorizontalAlignment="Left" VerticalAlignment="Center" />
-                <TextBlock x:Name="Title" Text="{x:Bind WeatherAlert.Title}" Padding="5" Grid.Column="1"
-                           FontSize="12"
-                           VerticalAlignment="Center" />
-                <TextBlock x:Name="Date" Text="{x:Bind WeatherAlert.PostDate}" Padding="5" Grid.Column="2"
+                <Viewbox Name="TitleBox" Grid.Column="1" Height="30" HorizontalAlignment="Left">
+                    <TextBlock x:Name="Title" Text="{x:Bind WeatherAlert.Title, FallbackValue='Flood Warning, Areal Flood Advisory'}" Padding="5"
+                               FontSize="12" VerticalAlignment="Center" />
+                </Viewbox>
+                <TextBlock x:Name="Date" Text="{x:Bind WeatherAlert.PostDate, FallbackValue='1hr ago'}" Padding="5" Grid.Column="2"
                            FontSize="{Binding ElementName=Title, Path=FontSize}"
                            VerticalAlignment="Center" />
             </Grid>
@@ -281,9 +283,12 @@
                     Padding="5"
                     Visibility="{Binding Converter={StaticResource booleanToVisibilityConverter}, ElementName=AlertHeader, Path=IsChecked}">
             <StackPanel Padding="10">
-                <TextBlock Text="{x:Bind WeatherAlert.ExpireDate}" IsTextSelectionEnabled="False" />
-                <TextBlock Text="{x:Bind WeatherAlert.Message}" IsTextSelectionEnabled="False" />
-                <TextBlock Text="{x:Bind WeatherAlert.Attribution}" IsTextSelectionEnabled="False" />
+                <TextBlock Text="{x:Bind WeatherAlert.ExpireDate}" IsTextSelectionEnabled="False"
+                           TextWrapping="WrapWholeWords" FontSize="14" />
+                <TextBlock Text="{x:Bind WeatherAlert.Message}" IsTextSelectionEnabled="False"
+                           TextWrapping="WrapWholeWords" FontSize="14" />
+                <TextBlock Text="{x:Bind WeatherAlert.Attribution}" IsTextSelectionEnabled="False"
+                           TextWrapping="WrapWholeWords" FontSize="14" />
             </StackPanel>
         </StackPanel>
         <VisualStateManager.VisualStateGroups>
