--- a/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
@@ -60,6 +60,7 @@
                     android:id="@+id/alert_button"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
+                    android:layout_gravity="center_horizontal"
                     android:layout_margin="4dp"
                     android:background="@drawable/light_round_corner_bg"
                     android:orientation="horizontal"
