--- a/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
@@ -270,9 +270,9 @@
                                          Width="25"
                                          Padding="5,0" Grid.Column="0"
                                          HorizontalAlignment="Left" VerticalAlignment="Center" />
-                <Viewbox Name="TitleBox" Grid.Column="1" Height="30" HorizontalAlignment="Left">
+                <Viewbox Name="TitleBox" Grid.Column="1" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center">
                     <TextBlock x:Name="Title" Text="{x:Bind WeatherAlert.Title, FallbackValue='Flood Warning, Areal Flood Advisory'}" Padding="5"
-                               FontSize="12" VerticalAlignment="Center" />
+                               FontSize="12" />
                 </Viewbox>
                 <TextBlock x:Name="Date" Text="{x:Bind WeatherAlert.PostDate, FallbackValue='1hr ago'}" Padding="5" Grid.Column="2"
                            FontSize="{Binding ElementName=Title, Path=FontSize}"
