--- a/SimpleWeather.UWP/Shell.xaml
+++ b/SimpleWeather.UWP/Shell.xaml
@@ -3,146 +3,63 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SimpleWeather.UWP"
+    xmlns:toolkitControls="using:Microsoft.Toolkit.Uwp.UI.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
     <Page.Resources>
-        <Style x:Key="BurgerIcon" TargetType="TextBlock">
-            <Setter Property="FontFamily" Value="Segoe MDL2 Assets"/>
-            <Setter Property="HorizontalAlignment" Value="Center"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-        </Style>
-        <Style x:Key="BurgerButton" TargetType="Button">
-            <Setter Property="Background" Value="Transparent"/>
-            <Setter Property="BorderBrush" Value="Transparent"/>
-            <Setter Property="BorderThickness" Value="0"/>
-            <Setter Property="Padding" Value="0"/>
-            <Setter Property="RequestedTheme" Value="Dark"/>
-            <Setter Property="HorizontalAlignment" Value="Left"/>
-            <Setter Property="VerticalAlignment" Value="Center"/>
-            <Setter Property="FontFamily" Value="{ThemeResource ContentControlThemeFontFamily}"/>
-            <Setter Property="FontWeight" Value="Normal"/>
-            <Setter Property="FontSize" Value="{ThemeResource ControlContentThemeFontSize}"/>
-            <Setter Property="UseSystemFocusVisuals" Value="True"/>
-            <Setter Property="Template">
-                <Setter.Value>
-                    <ControlTemplate TargetType="Button">
-                        <Grid x:Name="RootGrid" Background="{TemplateBinding Background}">
-                            <VisualStateManager.VisualStateGroups>
-                                <VisualStateGroup x:Name="CommonStates">
-                                    <VisualState x:Name="Normal">
-                                        <Storyboard>
-                                            <PointerUpThemeAnimation Storyboard.TargetName="RootGrid"/>
-                                        </Storyboard>
-                                    </VisualState>
-                                    <VisualState x:Name="PointerOver">
-                                        <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="ContentPresenter">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightBaseMediumLowBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentPresenter">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightBaseHighBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                            <PointerUpThemeAnimation Storyboard.TargetName="RootGrid"/>
-                                        </Storyboard>
-                                    </VisualState>
-                                    <VisualState x:Name="Pressed">
-                                        <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightBaseMediumBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentPresenter">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlHighlightBaseHighBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </VisualState>
-                                    <VisualState x:Name="Disabled">
-                                        <Storyboard>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Background" Storyboard.TargetName="RootGrid">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlBackgroundBaseLowBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Foreground" Storyboard.TargetName="ContentPresenter">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlDisabledBaseMediumLowBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                            <ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="BorderBrush" Storyboard.TargetName="ContentPresenter">
-                                                <DiscreteObjectKeyFrame KeyTime="0" Value="{ThemeResource SystemControlDisabledTransparentBrush}"/>
-                                            </ObjectAnimationUsingKeyFrames>
-                                        </Storyboard>
-                                    </VisualState>
-                                </VisualStateGroup>
-                            </VisualStateManager.VisualStateGroups>
-                            <ContentPresenter x:Name="ContentPresenter" AutomationProperties.AccessibilityView="Raw" BorderBrush="{TemplateBinding BorderBrush}" BorderThickness="{TemplateBinding BorderThickness}" ContentTemplate="{TemplateBinding ContentTemplate}" ContentTransitions="{TemplateBinding ContentTransitions}" Content="{TemplateBinding Content}" HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}" Padding="{TemplateBinding Padding}" VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"/>
-                        </Grid>
-                    </ControlTemplate>
-                </Setter.Value>
-            </Setter>
-        </Style>
+        <DataTemplate x:Key="DefaultTemplate" x:DataType="local:MenuItem">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="48" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock Grid.Column="0" Text="{x:Bind Icon, Mode=OneWay}"
+                           HorizontalAlignment="Center" VerticalAlignment="Center"
+                           Foreground="White" FontFamily="{x:Bind FontFamily, Mode=OneWay}" />
+                <TextBlock Grid.Column="1" Text="{x:Bind Name, Mode=OneWay}"
+                           Padding="10,5"
+                           FontSize="16" VerticalAlignment="Center" Foreground="White" />
+            </Grid>
+        </DataTemplate>
     </Page.Resources>
 
-    <Grid>
-        <Border Width="48" Height="48" HorizontalAlignment="Left" VerticalAlignment="Top" Canvas.ZIndex="100">
-            <Border.Background>
-                <SolidColorBrush Color="{x:Bind HamburgerButton.Background.(SolidColorBrush.Color), FallbackValue='#FF006FBF', Mode=OneWay}" />
-            </Border.Background>
-            <Button x:Name="HamburgerButton" Style="{StaticResource BurgerButton}" FontFamily="Segoe MDL2 Assets" Content="&#xE700;"
-                    Background="#FF006FBF"
-                    Width="48" Height="48" Click="HamburgerButton_Click" />
-        </Border>
-        <SplitView x:Name="HamBurgerMenu" DisplayMode="Overlay" IsPaneOpen="False"
-                   CompactPaneLength="48" OpenPaneLength="250" PaneBackground="Transparent">
-            <SplitView.Pane>
-                <StackPanel Background="Black" Margin="0,48,0,0">
-                    <StackPanel Orientation="Horizontal">
-                        <Button x:Name="WeatherButton" Click="WeatherButton_Click" Style="{StaticResource BurgerButton}">
-                            <Grid Height="48" Width="{x:Bind HamBurgerMenu.OpenPaneLength, Mode=OneWay}">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="48"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xf00d;" Style="{StaticResource WeatherIcon}" Grid.Column="0" FontSize="15"/>
-                                <TextBlock x:Uid="Nav_WeatherNow" Text="Weather" RequestedTheme="Dark" FontSize="18" VerticalAlignment="Center" Padding="5" Grid.Column="1" />
-                            </Grid>
-                        </Button>
-                        <StackPanel.Background>
-                            <SolidColorBrush Color="{x:Bind WeatherButton.Background.(SolidColorBrush.Color), Mode=OneWay}" />
-                        </StackPanel.Background>
-                    </StackPanel>
-                    <StackPanel Orientation="Horizontal">
-                        <Button x:Name="LocationsButton" Click="LocationsButton_Click" Style="{StaticResource BurgerButton}">
-                            <Grid Height="48" Width="{x:Bind HamBurgerMenu.OpenPaneLength, Mode=OneWay}">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="48"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xEA37;" Style="{StaticResource BurgerIcon}" Grid.Column="0"/>
-                                <TextBlock x:Uid="Nav_Locations" Text="Locations" RequestedTheme="Dark" FontSize="18" VerticalAlignment="Center" Padding="5" Grid.Column="1" />
-                            </Grid>
-                        </Button>
-                        <StackPanel.Background>
-                            <SolidColorBrush Color="{x:Bind LocationsButton.Background.(SolidColorBrush.Color), Mode=OneWay}" />
-                        </StackPanel.Background>
-                    </StackPanel>
-                    <StackPanel x:Name="SettingsPanel" Orientation="Horizontal">
-                        <Button x:Name="SettingsButton" Click="SettingsButton_Click" Style="{StaticResource BurgerButton}">
-                            <Grid Height="48" Width="{x:Bind HamBurgerMenu.OpenPaneLength, Mode=OneWay}">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="48"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <TextBlock Text="&#xE713;" Style="{StaticResource BurgerIcon}" Grid.Column="0" />
-                                <TextBlock x:Uid="Nav_Settings" Text="Settings" RequestedTheme="Dark" FontSize="18" VerticalAlignment="Center" Padding="5" Grid.Column="1" />
-                            </Grid>
-                        </Button>
-                        <StackPanel.Background>
-                            <SolidColorBrush Color="{x:Bind SettingsButton.Background.(SolidColorBrush.Color), Mode=OneWay}" />
-                        </StackPanel.Background>
-                    </StackPanel>
-                </StackPanel>
-            </SplitView.Pane>
-            <SplitView.Content>
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="48" />
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
+        <CommandBar x:Name="CommandBar" RequestedTheme="Dark" Background="#FF006FBF" Foreground="White" Grid.Row="0">
+            <CommandBar.Content>
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+                    <Button Style="{StaticResource BurgerButton}" Grid.Column="0" Height="48" Width="48"
+                            Click="HamburgerButton_Click">
+                        <Button.Content>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" FontSize="16" Glyph="&#xE700;" />
+                        </Button.Content>
+                    </Button>
+                    <TextBlock x:Name="CommandBarTitle" Text="SimpleWeather" Style="{StaticResource CommandBarLabel}" Grid.Column="1" />
+                </Grid>
+            </CommandBar.Content>
+        </CommandBar>
+        <toolkitControls:HamburgerMenu x:Name="HamBurgerMenu" Grid.Row="1"
+                                       DisplayMode="Overlay" IsPaneOpen="True"
+                                       CompactPaneLength="48"
+                                       HamburgerHeight="48" HamburgerWidth="48"
+                                       PaneBackground="Black" Foreground="White"
+                                       ItemTemplate="{StaticResource DefaultTemplate}"
+                                       OptionsItemTemplate="{StaticResource DefaultTemplate}"
+                                       ItemClick="HamBurgerMenu_ItemClick"
+                                       OptionsItemClick="HamBurgerMenu_ItemClick"
+                                       Style="{StaticResource HamburgerMenuStyle}">
+            <toolkitControls:HamburgerMenu.Content>
                 <Frame x:Name="FrameContent" />
-            </SplitView.Content>
-        </SplitView>
+            </toolkitControls:HamburgerMenu.Content>
+        </toolkitControls:HamburgerMenu>
         <VisualStateManager.VisualStateGroups>
             <VisualStateGroup>
                 <VisualState x:Name="Mobile">
@@ -151,7 +68,6 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="HamBurgerMenu.DisplayMode" Value="Overlay"/>
-                        <Setter Target="FrameContent.Margin" Value="0,-1,0,0" />
                     </VisualState.Setters>
                 </VisualState>
                 <VisualState x:Name="Desktop">
@@ -160,7 +76,6 @@
                     </VisualState.StateTriggers>
                     <VisualState.Setters>
                         <Setter Target="HamBurgerMenu.DisplayMode" Value="CompactOverlay"/>
-                        <Setter Target="FrameContent.Margin" Value="0,0,0,0" />
                     </VisualState.Setters>
                 </VisualState>
             </VisualStateGroup>
