--- a/SimpleWeather.Android/Resources/layout/weather_alert_panel.xml
+++ b/SimpleWeather.Android/Resources/layout/weather_alert_panel.xml
@@ -71,18 +71,21 @@
                 app:autoSizeMinTextSize="2dp"
                 tools:text="1hr ago" />
 
-            <android.support.v7.widget.AppCompatImageView
+            <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/expand_icon"
+                style="@style/MaterialIcon"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:adjustViewBounds="true"
                 android:background="@android:color/transparent"
                 android:paddingEnd="24dp"
                 android:paddingLeft="8dp"
                 android:paddingRight="24dp"
                 android:paddingStart="8dp"
-                app:srcCompat="@drawable/ic_expand_more_white_24dp" />
+                android:text="@string/materialicon_expand_more"
+                android:textColor="@android:color/white"
+                app:fontFamily="@font/materialicons_regular"
+                tools:fontFamily="@font/materialicons_regular" />
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
