--- a/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
+++ b/SimpleWeather.UWP/Controls/WeatherAlertPanel.xaml
@@ -267,20 +267,21 @@
                 <toolkitControls:ImageEx x:Name="AlertIcon"
                                          Source="/Assets/WeatherIcons/png/ic_error_white.png"
                                          Width="25"
-                                         Padding="5,0" Grid.Column="0"
+                                         Margin="2,0,0,0" 
+                                         Grid.Column="0"
                                          HorizontalAlignment="Left" VerticalAlignment="Center" />
-                <Viewbox Name="TitleBox" Grid.Column="1" Height="30" HorizontalAlignment="Left" VerticalAlignment="Center">
-                    <TextBlock x:Name="Title" Text="{x:Bind WeatherAlert.Title, FallbackValue='Flood Warning, Areal Flood Advisory'}" Padding="5"
-                               FontSize="12" />
+                <Viewbox Name="TitleBox" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center">
+                    <TextBlock x:Name="Title" Text="{x:Bind WeatherAlert.Title, FallbackValue='Flood Warning, Areal Flood Advisory'}"
+                               Padding="5" FontSize="12" />
                 </Viewbox>
                 <TextBlock x:Name="Date" Text="{x:Bind WeatherAlert.PostDate, FallbackValue='1hr ago'}" Padding="5" Grid.Column="2"
-                           FontSize="{Binding ElementName=Title, Path=FontSize}"
+                           FontSize="{x:Bind Title.FontSize}"
                            VerticalAlignment="Center" />
             </Grid>
         </ToggleButton>
         <StackPanel Background="LightSlateGray" Grid.Row="1"
                     Padding="5"
-                    Visibility="{Binding Converter={StaticResource booleanToVisibilityConverter}, ElementName=AlertHeader, Path=IsChecked}">
+                    Visibility="{x:Bind AlertHeader.IsChecked}">
             <StackPanel Padding="10">
                 <TextBlock Text="{x:Bind WeatherAlert.ExpireDate}" IsTextSelectionEnabled="False"
                            TextWrapping="WrapWholeWords" FontSize="14" />
