--- a/SimpleWeather.Android/Resources/layout/activity_setup.xml
+++ b/SimpleWeather.Android/Resources/layout/activity_setup.xml
@@ -8,7 +8,7 @@
     android:background="@color/colorPrimary"
     android:focusable="true"
     android:focusableInTouchMode="true"
-    tools:context="SimpleWeather.Droid.Controls.SetupActivity">
+    tools:context="SimpleWeather.Droid.App.SetupActivity">
 
     <ScrollView
         android:layout_width="match_parent"
