--- a/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimaryLight"
-    tools:context="SimpleWeather.Droid.Controls.WeatherNowFragment">
+    tools:context="SimpleWeather.Droid.App.WeatherNowFragment">
 
     <FrameLayout
         android:layout_width="match_parent"
