--- a/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
+++ b/SimpleWeather.Android/Resources/layout/fragment_weather_now.xml
@@ -186,20 +186,11 @@
                         android:layout_below="@+id/forecast_header"
                         android:background="@android:color/white" />
 
-                    <HorizontalScrollView
-                        android:id="@+id/forecast_scrollview"
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/forecast_view"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/forecast_border">
-
-                        <LinearLayout
-                            android:id="@+id/forecast_view"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                        </LinearLayout>
-                    </HorizontalScrollView>
+                        android:layout_below="@+id/forecast_border"/>
 
                     <android.support.v4.view.ViewPager
                         android:id="@+id/txt_forecast_viewpgr"
@@ -242,19 +233,10 @@
                         android:layout_height="1dp"
                         android:background="@android:color/white" />
 
-                    <HorizontalScrollView
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/hourly_forecast_view"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-
-                        <LinearLayout
-                            android:id="@+id/hourly_forecast_view"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:orientation="horizontal">
-
-                        </LinearLayout>
-
-                    </HorizontalScrollView>
+                        android:layout_height="wrap_content" />
 
                 </LinearLayout>
 
