--- a/SimpleWeather.Wear/Resources/layout/fragment_weather_details.xml
+++ b/SimpleWeather.Wear/Resources/layout/fragment_weather_details.xml
@@ -24,7 +24,7 @@
                 android:layout_height="match_parent"
                 android:orientation="vertical">
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/precipitation_label"
                     style="@style/WeatherDetails"
                     android:layout_width="match_parent"
@@ -40,7 +40,7 @@
                     android:layout_below="@+id/precipitation_label"
                     android:background="@android:color/white" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/chance_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -50,7 +50,7 @@
                     android:layout_toStartOf="@+id/chance_val"
                     android:text="@string/label_chance" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/chance_val"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -59,7 +59,7 @@
                     android:layout_below="@+id/precipitation_label_border"
                     tools:text="20%" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/qpf_rain_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -69,17 +69,16 @@
                     android:layout_toStartOf="@+id/qpf_rain_val"
                     android:text="@string/label_qpf_rain" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/qpf_rain_val"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/chance_val"
-                    android:gravity="center"
                     tools:text="0.01 in" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/qpf_snow_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -89,14 +88,13 @@
                     android:layout_toStartOf="@+id/qpf_snow_val"
                     android:text="@string/label_qpf_snow" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/qpf_snow_val"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/qpf_rain_val"
-                    android:gravity="center"
                     tools:text="0.00 in" />
 
             </RelativeLayout>
@@ -106,7 +104,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/atmosphere_label"
                     style="@style/WeatherDetails"
                     android:layout_width="match_parent"
@@ -122,7 +120,7 @@
                     android:layout_below="@+id/atmosphere_label"
                     android:background="@android:color/white" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/cloudiness_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -132,7 +130,7 @@
                     android:layout_toStartOf="@+id/cloudiness"
                     android:text="@string/label_cloudiness" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/cloudiness"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -141,7 +139,7 @@
                     android:layout_below="@+id/atmosphere_label_border"
                     tools:text="100%" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/pressure_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -166,7 +164,7 @@
                     tools:fontFamily="@font/weathericons"
                     tools:text="@string/wi_direction_up" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/pressure"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -174,10 +172,9 @@
                     android:layout_alignBottom="@+id/pressure_state"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/cloudiness"
-                    android:gravity="center"
                     tools:text="1000.2 mb" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/humidity_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -187,7 +184,7 @@
                     android:layout_toStartOf="@+id/humidity"
                     android:text="@string/label_humidity" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/humidity"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -196,7 +193,7 @@
                     android:layout_below="@+id/pressure"
                     tools:text="100%" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/visibility_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -206,7 +203,7 @@
                     android:layout_toStartOf="@+id/visibility_val"
                     android:text="@string/label_visibility" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/visibility_val"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -222,7 +219,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/condition_label"
                     style="@style/WeatherDetails"
                     android:layout_width="match_parent"
@@ -238,7 +235,7 @@
                     android:layout_below="@+id/condition_label"
                     android:background="@android:color/white" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/feelslike_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -248,17 +245,16 @@
                     android:layout_toStartOf="@+id/feelslike"
                     android:text="@string/label_feelslike" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/feelslike"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="true"
                     android:layout_below="@+id/condition_label_border"
-                    android:gravity="center"
                     tools:text="36º" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/wind_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -281,7 +277,7 @@
                     app:fontFamily="@font/weathericons"
                     tools:fontFamily="@font/weathericons" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/wind_speed"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -298,7 +294,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/sunriseset_label"
                     style="@style/WeatherDetails"
                     android:layout_width="match_parent"
@@ -315,7 +311,7 @@
                     android:layout_below="@+id/sunriseset_label"
                     android:background="@android:color/white" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/sunrise_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -338,7 +334,7 @@
                     app:fontFamily="@font/weathericons"
                     tools:fontFamily="@font/weathericons" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/sunrise_time"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -348,7 +344,7 @@
                     android:layout_below="@+id/sunriseset_label_border"
                     tools:text="06:45 AM" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/sunset_label"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -363,6 +359,8 @@
                     android:id="@+id/sunset_icon"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignEnd="@+id/sunrise_icon"
+                    android:layout_alignStart="@+id/sunrise_icon"
                     android:layout_below="@+id/sunrise_icon"
                     android:layout_toStartOf="@+id/sunset_time"
                     android:padding="6dp"
@@ -371,7 +369,7 @@
                     app:fontFamily="@font/weathericons"
                     tools:fontFamily="@font/weathericons" />
 
-                <TextView
+                <android.support.v7.widget.AppCompatTextView
                     android:id="@+id/sunset_time"
                     style="@style/WeatherDetails"
                     android:layout_width="wrap_content"
@@ -383,7 +381,7 @@
 
             </RelativeLayout>
 
-            <TextView
+            <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/weather_credit"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
